--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
