--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-moment": "^1.1.1",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sort-objects-array": "^1.7.1",
