--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/gez1985/ipl23/issues"
   },
   "dependencies": {
+    "camelcase-keys": "^7.0.2",
     "concurrently": "^6.5.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
