semi shortlist page done

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "url": "https://github.com/gez1985/ipl23/issues"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
     "camelcase-keys": "^7.0.2",
     "concurrently": "^6.5.1",
     "cors": "^2.8.5",
