--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
+    "axios": "^1.3.5",
     "camelcase-keys": "^7.0.2",
     "concurrently": "^6.5.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "node-cron": "^3.0.2",
     "pg": "^8.5.1",
     "sass": "^1.43.2",
     "sort-objects-array": "^1.7.1"
